dark mode set with tailwind, with a button that toggles between the two modes

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <title>My Portfolio</title>
   </head>
-  <body>
+  <body class="bg-blue-500 dark:bg-pink-800">
+    <!--dark mode test , to remove after -->
     <div id="root">Something wrong in root div index.html</div>
     <script type="module" src="./index.tsx"></script>
   </body>
