dark/light button switch with value set in localstorage

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>My Portfolio</title>
   </head>
-  <body class="bg-blue-500 dark:bg-pink-800">
-    <!--dark mode test , to remove after -->
+  <!--dark mode test , to remove after -->
+  <body class="bg-white dark:bg-pink-800">
     <div id="root">Something wrong in root div index.html</div>
     <script type="module" src="./index.tsx"></script>
   </body>
